--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,22 +1,20 @@
 .order-enter {
   -webkit-transform: translateX(-120%);
           transform: translateX(-120%);
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
   max-height: 0;
   padding: 0 !important;
 }
 .order-enter.order-enter-active {
-  max-height: 60px;
   -webkit-transform: translateX(0);
           transform: translateX(0);
   padding: 2rem 0 !important;
+  max-height: 60px;
 }
 .order-exit {
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
-  -webkit-transform: translateX(0);
-          transform: translateX(0);
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
 .order-exit.order-exit-active {
   -webkit-transform: translateX(120%);
@@ -25,8 +23,8 @@
 }
 .count-enter {
   background: #f00;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
   -webkit-transform: translateY(100%);
           transform: translateY(100%);
 }
@@ -39,16 +37,16 @@
   background: #000;
   -webkit-transform: translateY(0);
           transform: translateY(0);
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
   position: absolute;
   left: 0;
   bottom: 0;
 }
 .count-exit.count-exit-active {
   background: #008000;
-  -webkit-transform: translateY(-100%) scale(3);
-          transform: translateY(-100%) scale(3);
+  -webkit-transform: translateY(-100%);
+          transform: translateY(-100%);
 }
 @font-face {
   font-family: "haymakerregular";
